fix alignment issue on the home page top banner

--- a/components/home/bannerTop/Headline.module.scss
+++ b/components/home/bannerTop/Headline.module.scss
@@ -8,7 +8,7 @@
   text-align: center;
   @media (max-width: $mobile-max) {
     font-size: 36px;
+    line-height: 40px;
     text-align: left;
-    padding-left: 8%;
   }
 }
