--- a/components/home/bannerTop/SubHeadline.module.scss
+++ b/components/home/bannerTop/SubHeadline.module.scss
@@ -11,6 +11,5 @@
     font-size: 24px;
     line-height: 32px;
     text-align: left;
-    padding-left: 8%;
   }
 }
